added second and third pages

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <title>HTML form</title>
 </head>
 <body>
+
+    <a href="bootstrap-form.html"><button class="round-btn"><i class='bx  bx-arrow-right'  ></i></button></a>
+
     <div class="box">
         <form action="#">
             <div class="text-box">
