--- a/registration-form.html
+++ b/registration-form.html
@@ -72,11 +72,11 @@
             <div class="mb-3">
               <label class="form-label d-block">Gender</label>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" id="male" value="male" required>
+                <input class="form-check-input" type="radio" name="gender" id="male" value="male"  >
                 <label class="form-check-label" for="male">Male</label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" id="female" value="female" required>
+                <input class="form-check-input" type="radio" name="gender" id="female" value="female" >
                 <label class="form-check-label" for="female">Female</label>
               </div>
               <div class="invalid-feedback d-block">Please select a gender.</div>
